--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>
-            D24
-        </title>
-        <link rel="stylesheet" type= "text/css" href="D24.CSS">
 
-        <body>
-            <div class ="flex"> <img src = "d24.png" width="190px" style="width: 190px;"> </div>
-            <br><br>
-            <h1 class = "flex"> It does. </h1>
+<head>
+    <meta charset="utf-8">
+    <title>NavBar</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <img class="logo" src="logo.png" alt="logo"> 
+        <nav>
+            <ul class="nav_links">
+                <li><a href="#">This</a></li>
+                <li><a href="#">Site</a></li>
+                <li><a href="#">Is</a></li>
+                <li><a href="#">Under</a></li>
+                <li><a href="#">Construction</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#"><button>Contact
+        </button></a>
+    </header>
 
-        </body>
-    
-
-    </head>
-
+</body>
 
 </html>
