--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NavBar</title>
+    <title>D24</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png" alt="logo"> 
+        <img class="logo" href="logo.png" src="logo.png" alt="logo"> 
         <nav>
             <ul class="nav_links">
-                <li><a href="#">This</a></li>
-                <li><a href="#">Site</a></li>
-                <li><a href="#">Is</a></li>
-                <li><a href="#">Under</a></li>
-                <li><a href="#">Construction</a></li>
+                <li><a href="Pages/test1.html">This</a></li>
+                <li><a href="Pages/test2.html">site</a></li>
+                <li><a href="Pages/test3.html">is</a></li>
+                <li><a href="Pages/test4.html">under</a></li>
+                <li><a href="Pages/test5.html">construction.</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#"><button>Contact
-        </button></a>
+        <a class="cta" href="contact.html"><button>Contact</button>
+        </a>
     </header>
 
 </body>
