--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         </nav>
         <a class="cta" href="contact.html"><button>Contact</button>
         </a>
+        
+    <p class="logo">
+        Naruto is kinda trash ngl. hes kinda short.
+        </p>
+        
     </header>
 
 </body>
