--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
 </head>
 <body>
     <header>
-        <img class="logo" href="logo.png" src="logo.png" alt="logo"> 
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img class="logo" src="logo.png" alt="logo"></a> 
         <nav>
             <ul class="nav_links">
-                <li><a href="Pages/test1.html">This</a></li>
-                <li><a href="Pages/test2.html">site</a></li>
-                <li><a href="Pages/test3.html">is</a></li>
-                <li><a href="Pages/test4.html">under</a></li>
-                <li><a href="Pages/test5.html">construction.</a></li>
+                <li><a href="test1.html">About</a></li>
+                <li><a href="test2.html">Prodcuts</a></li>
+                <li><a href="test3.html">Tutorials</a></li>
+                <li><a href="test4.html">Github</a></li>
+
             </ul>
         </nav>
-        <a class="cta" href="contact.html"><button>Contact</button>
+        <a class="cta" href="contact.html">
+            <button>Contact Us</button>
         </a>
-    </header>
-
+    </header>       
 </body>
-
 </html>
