--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img class="logo" src="logo.png" alt="logo"></a> 
+        <a class="logo" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="logo.png" alt="logo"></a> 
         <nav>
             <ul class="nav_links">
                 <li><a href="test1.html">About</a></li>
