--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="nav_links">
                 <li><a href="test1.html">About</a></li>
                 <li><a href="test2.html">Prodcuts</a></li>
-                <li><a href="test4.html">Github</a></li>
+                <li><a href="https://github.com/Derper24">Github</a></li>
 
             </ul>
         </nav>
