--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="nav_links">
                 <li><a href="test1.html">About</a></li>
-                <li><a href="test2.html">Prodcuts</a></li>
+                <li><a href="test2.html">Products</a></li>
                 <li><a href="https://github.com/Derper24">Github</a></li>
 
             </ul>
