--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <header>
-        <a class="logo" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="logo.png" alt="logo"></a> 
+        <a class="logo"href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="logo.png" alt="logo"></a> 
         <nav>
             <ul class="nav_links">
-                <li><a href="test1.html">About</a></li>
-                <li><a href="test2.html">Products</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="products.html">Products</a></li>
                 <li><a href="https://github.com/Derper24">Github</a></li>
 
             </ul>
