--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     
     <div1 class="fadein">
         <h1 class="center">I will be hosting a charity livestream event on friday the 22nd of july.</h1>
-        
+        <h2 href="https://www.justgiving.com/fundraising/secret-seven"> CHARITY FUNDRAISER </h2>
+
         <p class="center">It will be a tournement event for the game modes "Bed wars" and or "Build battle" on hypixel</p> <b></b>
         <p2 class="center">Any details regarding this event will be held here on the D24 website</p2> <b></b>
         <p3 class="center">Any questions can be sent on discord @Derper24#0318 </p3> <b></b>
