--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <h1 class="center">I will be hosting a charity livestream event on friday the 22nd of july.</h1>
         <a class="logo" href="https://www.justgiving.com/fundraising/secret-seven" src="poster.png"></a>
 
-        <p class="center">It will be a tournement event for the game modes "Bed wars" and or "Build battle" on hypixel</p> <b></b>
-        <p2 class="center">Any details regarding this event will be held here on the D24 website</p2> <b></b>
-        <p3 class="center">Any questions can be sent on discord @Derper24#0318 </p3> <b></b>
-        <p4 class="center">See you all there!</p4> <b></b>
+        <p class="center">Thank you all for the support, donation and lovely comments throughout ncs</p>
+        <p2 class="center">It has been so lovely working with everyone</p2>
+        <p3 class="center">I look forward to hosting more projects in the future</p3>
+        <p4 class="center">See you soon! -D24 </p4>
     </div1>
     
 </body>
