--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             </ul>
         </nav>
-        <a class="cta" href="contact.html"> <button>Contact Us</button> </a>
+        <a class="cta" href="contact.html"> <button>Contact</button> </a>
     </header>
     
     <div1 class="fadein">
