--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a class="logo"href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"><img src="logo.png" alt="logo"></a> 
+        <a class="logo">D24 info page</a> 
         <nav>
             <ul class="nav_links">
                 <li><a href="about.html">About</a></li>
@@ -20,8 +20,17 @@
     </header>
     
     <div1 class="fadein">
-        <h1 class="center">This website will host information about me and my projects.</h1>
+        <h1 class="center"></h1>
     </div1>
+
+    <div2 class="fadein">
+        <h1 class="center">Shenanigans, coming <font color="red"> <br>soon..</font></h1>
+    </div2>
+
+    <div class="card-group">
+        <div class="big-card center">
+        </div>
+    </div>
     
 </body>
 </html>
